Improve webaite style.
So better background :), better font, better style for textarea, more
spacing in form, minimize displayed size for media previews.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,12 @@
+html {
+  min-height: 100vh;
+}
+
 body {
-  background: #110d0d;
-  color: #d9e0fc;
+  background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
+  color: #010418;
+  text-shadow: 1px 1px 0 rgba(1, 4, 24, 0.2);
+  font-family: "proxima-soft", sans-serif;
 }
 
 header {
@@ -15,9 +21,49 @@ header {
           align-items: center;
 }
 
+header a,
+header a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+header a:hover {
+  border-bottom: 2px solid rgba(1, 4, 24, 0.5);
+}
+
 .container {
   margin: 0 auto;
   padding-left: 10em;
   padding-right: 10em;
+}
+
+a,
+a:visited {
+  color: #4254f0;
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: 2px solid rgba(66, 84, 240, 0.5);
+}
+
+a:focus {
+  outline: solid 2px;
+}
+
+form > div {
+  margin-bottom: 1rem;
+}
+
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  height: auto;
+  min-width: 20rem;
+}
+
+.media-preview img {
+  width: auto;
+  height: 25vh;
 }
 
