--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,14 @@
 html {
   min-height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 body {
@@ -31,10 +40,20 @@ header a:hover {
   border-bottom: 2px solid rgba(1, 4, 24, 0.5);
 }
 
-.container {
-  margin: 0 auto;
-  padding-left: 10em;
-  padding-right: 10em;
+@media (min-width: 501px) {
+  .container {
+    margin: 0 auto;
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 a,
@@ -59,7 +78,40 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   height: auto;
-  min-width: 20rem;
+}
+
+@media (min-width: 501px) {
+  textarea {
+    min-width: 20rem;
+  }
+}
+
+@media (max-width: 500px) {
+  textarea {
+    width: 100%;
+  }
+}
+
+.syndication-checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 0.2rem 0.5rem;
+  height: 2rem;
+}
+
+.syndication-checkbox img {
+  display: inline;
+  width: 1rem;
+  height: 1rem;
+}
+
+.syndication-checkbox span {
+  height: 1rem;
 }
 
 .media-preview img {
