--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,10 @@
 html {
     min-height: 100vh;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
@@ -27,10 +32,19 @@ header a:hover {
     border-bottom: 2px solid hsla(233, 89%, 5%, 0.5);
 }
 
-.container {
-    margin: 0 auto;
-    padding-left: 10em;
-    padding-right: 10em;
+@media (min-width: 501px) {
+    .container {
+        margin: 0 auto;
+        padding-left: 10em;
+        padding-right: 10em;
+    }
+}
+@media (max-width: 500px) {
+    .container {
+        width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
 
 a,
@@ -55,7 +69,36 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     height: auto;
-    min-width: 20rem;
+}
+
+@media (min-width: 501px) {
+    textarea {
+        min-width: 20rem
+    }
+}
+
+@media (max-width: 500px) {
+    textarea {
+        width: 100%;
+    }
+}
+
+.syndication-checkbox {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 0.2rem 0.5rem;
+    height: 2rem;
+}
+
+.syndication-checkbox img {
+    display: inline;
+    width: 1rem;
+    height: 1rem;
+}
+
+.syndication-checkbox span {
+    height: 1rem;
 }
 
 .media-preview img {
