--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@ html {
   min-height: 100vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
 }
 
 *,
@@ -11,17 +12,24 @@ html {
           box-sizing: inherit;
 }
 
-body {
-  background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
+#app {
   color: #010418;
   text-shadow: 1px 1px 0 rgba(1, 4, 24, 0.2);
   font-family: "proxima-soft", sans-serif;
-}
-
-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+header {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -42,7 +50,6 @@ header a:hover {
 
 @media (min-width: 501px) {
   .container {
-    margin: 0 auto;
     padding-left: 10em;
     padding-right: 10em;
   }
